k8s/30-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-service
  namespace: urlshortner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-service
  template:
    metadata:
      labels:
        app: python-service
    spec:
      containers:
        - name: python-service
          image: emon110852/urlshortner-python:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            httpGet: { path: "/", port: 5000 }
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet: { path: "/", port: 5000 }
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: urlshortner
spec:
  type: NodePort
  selector:
    app: python-service
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 31500
