k8s/60-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortner-ingress
  namespace: urlshortner
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: dash.short.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-service
                port: { number: 5000 }

    - host: go.short.local
      http:
        paths:
          - path: /([A-Za-z0-9]+)(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-service
                port: { number: 8000 }

    - host: node.short.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-service
                port: { number: 3000 }
